--- a/atividades/ex0018 da aula 17/index.html
+++ b/atividades/ex0018 da aula 17/index.html
@@ -3,25 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ex17</title>
+    <title>ex12</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Tabuada</h1>
+        <h1></h1>
     </header>
 
     <section>
         <div>
-            Número:
-            <input type="number" name="num" id="num">
-            <input type="button" value="Gerar Tabuada" onclick="calcular()">
+            sssss
         </div>
 
         <div>
-            <select name="" id="res" size="10">
-                <option>digite um numero acima</option>
-            </select>
+
         </div>
     </section>
 
