--- a/atividades/ex0018 da aula 17/index.html
+++ b/atividades/ex0018 da aula 17/index.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ex12</title>
+    <title>Analisador de numeros</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Analisador de Numeros</h1>
     </header>
 
     <section>
         <div>
-            sssss
+                Numero (entre 1 e 100): 
+                <input type="number" name="num" id="num">
+                <input type="button" value="Adicionar" onclick="validador()">
         </div>
-
+        
         <div>
+            <select name="" id="lista" size="5">
+            </select>
+        </div>
+        <p style="margin:0px;">
+            <input type="button" value="Finalizar" onclick="finalizar()">
+        </p>
+        <div id="res">
 
         </div>
     </section>
